# pivot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 01_legacy_pipeline.md  02_improvement_backlog.md  03_data_ingestion.md  04_package_layout.md  04_webapp_design.md  05_package_layout.md  06_supabase_training_storage.md  07_m4_implementation_plan.md  08_m5_implementation_plan.md
notebooks/: 01_preprocessing_methodology.ipynb  02_scaling_normalization_methodology.ipynb  03_hyperparameter_tuning.ipynb
pivot/: config.py  env.py
pivot/cleaning/: __init__.py  kronos.py
pivot/dataset/: __init__.py  batch.py  build.py  loader.py  overlap.py  samples.py  shards.py  (+1 more)
scripts/: dev.py  run-api.sh  run-web.sh  smoke-m4-core.py  update-domestic-master.sh  update-overseas-master.sh
server/: deps.py  jobs.py  live.py  main.py  serialize.py  training_worker.py
tests/: fakes.py  test_batch.py  test_cache_window.py  test_cleaning.py  test_deployment_repository.py  test_dev_script.py  test_diagnostics.py  test_fractal.py  test_jobs_sse.py  test_lifecycle.py  test_live_api.py  test_live_service.py  test_models.py  test_overlap.py  test_overseas_ingestion.py  test_preprocess_batch_api.py  test_realtime_aggregate.py  test_realtime_infer.py  test_run_repository.py  test_runs_api.py  test_samples.py  test_serialize.py  test_storage_repos.py  test_supabase_smoke.py  test_symbols_master.py  test_training_loader.py  test_training_loop.py  test_training_metrics.py  test_training_run.py  test_watchlist.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+87 files in other folders)
